images & spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,8 @@ header.scrolled {
 }
 
 .nav-container {
-  max-width: 1120px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0 4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
